构建语音系统

--- a/package.json
+++ b/package.json
@@ -7,11 +7,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "howler": "^2.2.3",
     "iconv-lite": "^0.6.3",
+    "lodash": "^4.17.21",
+    "lowdb": "^3.0.0",
+    "one-time": "^1.0.0",
+    "querystring": "^0.2.1",
+    "uuid": "^8.3.2",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
+    "sass": "^1.45.1",
     "vite": "^2.7.2"
-  }
+  },
+  "type": "module"
 }
