--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "iconv-lite": "^0.6.3",
     "lodash": "^4.17.21",
     "lowdb": "^3.0.0",
+    "node-schedule": "^2.1.0",
+    "nzh": "^1.0.8",
     "one-time": "^1.0.0",
     "querystring": "^0.2.1",
     "uuid": "^8.3.2",
