--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "node-schedule": "^2.1.0",
     "nzh": "^1.0.8",
     "one-time": "^1.0.0",
+    "openapi-types": "7.0.0",
     "querystring": "^0.2.1",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0",
     "swiper": "^7.4.1",
     "uuid": "^8.3.2",
     "vm2": "^3.9.5",
